--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,44 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+    
+    code {
+        font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    }
+    
+    img {
+        width: 75px;
+    }
+    
+    .github-profile {
+        margin: 1rem;
+    }
+    
+    .info {
+        display: inline-block;
+        margin-left: 12px;
+    }
+    
+    .name {
+        font-size: 1.25rem;
+        font-weight: bold;
+    }
+    
+    form {
+        border: thin solid #ddd;
+        background-color: #fbfbfb;
+        padding: 2rem;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .header {
+        text-align: center;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
